Fix search tabs and footer on mobile

--- a/smallslive/static/sass/layout/_footer.scss
+++ b/smallslive/static/sass/layout/_footer.scss
@@ -7,6 +7,18 @@ footer a {
   color: #121212;
 }
 
+.footer-info {
+  margin-bottom: 50px;
+  display: none;
+
+  &.active {
+    display: flex;
+    @media (max-width: $screen-sm-max) {
+      display: none;
+    }
+  }
+}
+
 footer a:hover {
   color: rgba(0, 0, 0, 0.6);
   text-decoration: none;
